# Cyber-Mercenary

./: .gitignore  .gitmodules  AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  README.md  SOUL.md  TOOLS.md  USER.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  requirements.txt
.github/workflows/: security.yml
agent/: pyproject.toml
agent/src/: __init__.py
agent/src/api/: metrics.py  server.py
agent/src/prompts/: analysis.txt  warning.txt
agent/src/services/: database.py  minimax.py  signer.py
contracts/src/: Deploy.s.sol
contracts/test/: Escrow.t.sol
cyber-mercenary/: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_SCHEMA.md  README.md  SECURITY.md  TESTING.md  foundry.toml  hardhat.config.ts  main.py.bak  package.json  pytest.ini  requirements-test.txt  requirements.txt  scanner_job.py.bak  slither.config.json
cyber-mercenary/.github/: SECURITY.md
cyber-mercenary/deploy/: cyber-mercenary.service
cyber-mercenary/docs/: CI_CD.md  audit-checklist.md
cyber-mercenary/frontend/: package.json
cyber-mercenary/k8s/: deployment.yaml  ingress.yaml
cyber-mercenary/terraform/: main.tf
deploy/: DEPLOYMENT.md
docs/: threat-model.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
helm/cyber-mercenary/: Chart.yaml  values.yaml
k8s/: service.yaml
memory/: 2026-02-06.md  2026-02-07.md
scripts/: setup.sh
terraform/: terraform.tfvars.example
tests/: conftest.py
tests/api/: test_api.py
tests/services/: test_services.py
(+57 files in other folders)
